# minijus

./: Dockerfile  Makefile  Readme.md  START.md  TEST_COLLECTION.md  docker-compose.yml  test-flow.sh
classifier/: pyproject.toml  pytest.ini
classifier/classifiers/: sensitive_subject_classifier.py
classifier/config/: sensitive_patterns.py
classifier/kafka/: config.py  consumer.py  runner.py
classifier/model/: __init__.py  lawsuit.py
classifier/normalizers/: subject_normalizer.py
classifier/test/: conftest.py
classifier/test/classifiers/: test_sensitive_subject_classifier.py
classifier/test/kafka/: test_runner.py
classifier/test/normalizers/: test_subject_normalizer.py
classifier/utils/: logger.py
data_collection-api/: Dockerfile  README.md  TESTING.md  WORKER_EXPLANATION.md  WORKER_FLOW.md  docker-compose.yml  pyproject.toml  test_queue.sh
data_collection-api/app/: main.py  metrics.py  metrics_endpoint.py
data_collection-api/app/controllers/: lawsuit_controller.py
data_collection-api/app/crawlers/: base_crawlers.py  crawler_factory.py
data_collection-api/app/db/: mongo.py
data_collection-api/app/exceptions/: custom_exceptions.py  error_handlers.py
data_collection-api/app/kafka/: config.py  producer.py
data_collection-api/app/models/: case_schema.py
data_collection-api/app/repositories/: case_repository.py
data_collection-api/app/scrapers/: base_court_scraper.py  scraper_factory.py  tjal_scrapers.py  tjce_scrapers.py
data_collection-api/app/services/: lawsuit_service.py
data_collection-api/app/tasks/: lawsuit_tasks.py
data_collection-api/app/utils/: cnj_utils.py  logging_config.py  validators.py
data_collection-api/app/workers/: celery_app.py
data_collection-api/tests/crawlers/: test_crawler_factory.py
data_collection-api/tests/exceptions/: test_custom_exceptions.py  test_error_handlers.py
data_collection-api/tests/fixtures/: case_normal.html  case_not_found.html  case_under_secrecy.html
data_collection-api/tests/models/: test_base_court_scraper.py
data_collection-api/tests/repositories/: test_case_repository.py
data_collection-api/tests/scrapers/: test_case_schema.py  test_scraper_factory.py
data_collection-api/tests/services/: test_lawsuit_service.py
data_collection-api/tests/utils/: test_cnj_utils.py  test_validators.py
db_sync/: main.py  migrations_runner.py  pyproject.toml  pytest.ini
db_sync/kafka/: config.py  consume.py  runner.py
db_sync/migrations/: 001_create_table_lawsuits.rollback.sql  001_create_table_lawsuits.sql  002_updated_at_trigger.rollback.sql  002_updated_at_trigger.sql  003_ensure_public_lawsuits.sql  004_add_indexes.rollback.sql  004_add_indexes.sql
db_sync/model/: __init__.py  lawsuit.py
db_sync/storage/: db.py  queries.py  repository.py  utils.py
db_sync/test/kafka/: test_consume_payload.py
db_sync/test/storage/: test_repository.py  test_utils.py
db_sync/utils/: logger.py
indexer/: Dockerfile  Makefile  README.md  main.py  pyproject.toml
indexer/indexer/controller/: index_controller.py
indexer/indexer/kafka/: config.py  consume.py  runner.py
indexer/indexer/models/: api_models.py  es_models.py  kb_models.py
indexer/indexer/repository/: db_repository.py  es_repository.py
indexer/indexer/services/: enrichment_service.py  indexing_service.py  normalization.py  validation_service.py
indexer/indexer/utils/: config.py  startup.py  transformers.py
indexer/resources/: index.json
indexer/tests/: conftest.py
indexer/tests/controller/: test_index_controller.py
initial_payload_producer/: lawsuit.json  main.py  pyproject.toml
searcher/: Dockerfile  Makefile  README.md  main.py  pyproject.toml
searcher/schema/: request.json  response.json
(+293 files in other folders)
