[tool.poetry]
name = "classifier"
version = "0.1.0"
description = ""
authors = ["JusbrasilDevs"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiokafka = "0.11.0"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
