[tool.poetry]
name = "data_colection"
version = "0.1.0"
description = "Data Collection Challenge for Justarter"
authors = ["Gustavo Jorge Novaes Silva"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
playwright = "^1.55.0"
beautifulsoup4 = "^4.13.5"
pymongo = "^4.15.1"
tenacity = "^9.1.2"
httpx = "0.26.0"
celery = "^5.4.0"
redis = "^5.2.0"
prometheus-client = "^0.20.0"
aiokafka = "^0.11.0"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "coverage (>=7.10.7,<8.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
