[tool.poetry]
name = "initial-producer"
version = "0.1.0"
description = ""
authors = ["JusbrasilDevs"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiokafka = "0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
