[tool.poetry]
name = "searcher"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
searcher = "searcher:start"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.0"}
python-dotenv = "^1.0.0"
uvicorn = "^0.38.0"
elasticsearch = "^8.0.0"
pydantic = "^2.12.3"
httpx = "^0.27.0"
pytest = "^8.4.2"
pytest-cov = "^5.0.0"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
